fix: search bar on web and add search icon on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -378,7 +378,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: 1.5rem !important;
   }
   .hextra-search-wrapper {
-    margin-right: auto !important;
+    margin-left: auto !important;
   }
 }
 
